# simple_app

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  manage.py  pyproject.toml  run_docker  sonar-project.properties  tox.ini
.github/workflows/: build-push.yml  flow.yml  main_swe-simple-app.yml  main_swe-simple-app.yml.example  main_swe-simple-web-app.yml  python-tests.yml
notebooks/example_user/: Untitled.ipynb
src/simple_app/: __init__.py  app.py  main.py
src/simple_app/api/: todo_api.py
src/simple_app/models/: todo.py
tests/: test_add.py
